--- a/OctagonPlatform/Views/Account/Login.cshtml
+++ b/OctagonPlatform/Views/Account/Login.cshtml
@@ -26,7 +26,7 @@
                 </div>
                 @Html.LabelFor(model => model.UserName, new { @class = "form-group" })
                 <div>
-                    @Html.TextBoxFor(model => model.UserName, new {@class="form-control", placeholder="UserName"})
+                    @Html.TextBoxFor(model => model.UserName, new {@class="form-control", placeholder="Username"})
                     @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="form-group">
-                @Html.ActionLink("Login", "Login", "Account", routeValues:null, htmlAttributes: new{@class = "btn btn-primary btn-block", role = "button",  style = "background-color: rgb(33, 128, 117)"} )
+                @Html.ActionLink("Login", "Login", "Account", routeValues:null, htmlAttributes: new{@class = "btn btn-primary btn-block", role = "button"} )
             </div>
             <div class="form-group">
                 @Html.ActionLink("Home", "Index", "Home", routeValues:null, htmlAttributes: new{@class = "btn btn-primary btn-block", role = "button",  style = "background-color: rgb(33, 128, 117)"} )
