--- a/OctagonPlatform/Views/Account/Login.cshtml
+++ b/OctagonPlatform/Views/Account/Login.cshtml
@@ -3,7 +3,7 @@
     Date: 08/15/2017
 *@
 
-@model OctagonPlatform.Models.ViewModels.UserViewModel
+@model OctagonPlatform.Models.DetailsViewModels.UserLoginViewModel
 @{
     ViewBag.Title = "Login";
     Layout = "~/Views/Shared/_LayoutHome.cshtml";
