cambio en el login page

--- a/OctagonPlatform/Views/Home/Index.cshtml
+++ b/OctagonPlatform/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
                     </ul>
                     
                     <p class="navbar-text navbar-right">
-                        @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { @class = "btn btn-default action-button" })
+                        @Html.ActionLink("Log in", "Login", "Account", new { area = "" }, htmlAttributes: new { @class = "btn btn-default action-button" })
                     </p>
                 </div>
             </div>
