--- a/OctagonPlatform/Content/bootstrap.css
+++ b/OctagonPlatform/Content/bootstrap.css
@@ -1209,7 +1209,7 @@ pre code {
   .col-md-offset-1 {
     margin-left: 8.333333333333332%;
   }
-  .col-md-offset-2 {
+  .form-group {
     margin-left: 16.666666666666664%;
   }
   .col-md-offset-3 {
