--- a/OctagonPlatform/Views/Account/Login.cshtml
+++ b/OctagonPlatform/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.DetailsViewModels.UserLoginViewModel
+﻿@model OctagonPlatform.Models.FormsViewModels.UserLoginViewModel
 
 @{
 
