--- a/OctagonPlatform/Views/Account/Login.cshtml
+++ b/OctagonPlatform/Views/Account/Login.cshtml
@@ -17,7 +17,7 @@
         <div class="form-horizontal">
 
             <h5>@ViewBag.Msg</h5>
-            @Html.ValidationSummary(true, "", new { @class = "text-warning" })
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
             <div class="form-group">
                 <h1 class="text-center" style="font-family: Bitter, serif;">Login</h1>
