--- a/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
@@ -25,7 +25,7 @@
                 <a href="@Url.Action("", "")"><i class="fa fa-table fa-fw"></i> Bank Accounts</a>
             </li>
             <li>
-                <a href="@Url.Action("", "")"><i class="fa fa-table fa-fw"></i> Users</a>
+                <a href="@Url.Action("Index", "Users")"><i class="fa fa-table fa-fw"></i> Users</a>
             </li>
             <li>
                 <a href="@Url.Action("", "")"><i class="fa fa-table fa-fw"></i> Reports</a>
