Revert "Updated Partner"
This reverts commit ff9bce038a15656241e627f0fa2881cf69a5a609.

--- a/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
@@ -19,13 +19,13 @@
                 <a href="@Url.Action("", "")"><i class="fa fa-table fa-fw"></i> Terminals</a>
             </li>
             <li>
-                <a href="@Url.Action("Index", "Partners")"><i class="fa fa-table fa-fw"></i> Partners</a>
+                <a href="@Url.Action("", "")"><i class="fa fa-table fa-fw"></i> Partners</a>
             </li>
             <li>
                 <a href="@Url.Action("", "")"><i class="fa fa-table fa-fw"></i> Bank Accounts</a>
             </li>
             <li>
-                <a href="@Url.Action("Index", "User")"><i class="fa fa-table fa-fw"></i> Users</a>
+                <a href="@Url.Action("", "")"><i class="fa fa-table fa-fw"></i> Users</a>
             </li>
             <li>
                 <a href="@Url.Action("", "")"><i class="fa fa-table fa-fw"></i> Reports</a>
