--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -10,35 +10,8 @@
     <h3 class="panel-title">List Partners</h3>
 </div>
     <p>
-        @Html.ActionLink("Add Partner", "Create", "Partners", routeValues:null, htmlAttributes: new{@class = "glyphicon glyphicon-plus-sign" })
+        @Html.ActionLink("Add Partner", "Create", "Partners", routeValues:null, htmlAttributes: new{@class = "fa fa-plus fa-fw" })
     </p>
-<table class="table table-striped table-hover ">
-    <thead>
-    <tr>
-        <th>Parent</th>
-        <th>Business Name</th>
-        <th>Address</th>
-        <th>Work Phone</th>
-        <th>Email</th>
-        <th>Status</th>
-    </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr class="info">
-                <td>@item.Parent.BusinessName</td>
-                <td>@item.BusinessName</td>
-                <td>@item.Address1</td>
-                <td>@item.WorkPhone</td>
-                <td>@item.Email</td>
-                <td>@item.Status</td>
-                <td>@Html.ActionLink("Edit", "Edit", new { @class = "glyphicon glyphicon-pencil" })</td>
-                <td>@Html.ActionLink("Delete", "Delete", new { @class = "glyphicon glyphicon-trash" })</td>
-                <td>@Html.ActionLink("Details", "Details", new { @class = "glyphicon glyphicon-list" })</td>
-            </tr>
-        }
-    
-</table> 
+   
         
 
