--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -33,9 +33,9 @@
                 <td>@item.WorkPhone</td>
                 <td>@item.Email</td>
                 <td>@item.Status</td>
-                <td>@Html.ActionLink("Edit", "Edit", new { @class = "glyphicon glyphicon-pencil" })</td>
-                <td>@Html.ActionLink("Delete", "Delete", new { @class = "glyphicon glyphicon-trash" })</td>
-                <td>@Html.ActionLink("Details", "Details", new { @class = "glyphicon glyphicon-list" })</td>
+                <td>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
+                <td>@Html.ActionLink("Delete", "Delete", new { id = item.Id })</td>
+                <td>@Html.ActionLink("Details", "", new { id = item.Id })</td>
             </tr>
         }
     
