--- a/OctagonPlatform/Views/Users/Edit.cshtml
+++ b/OctagonPlatform/Views/Users/Edit.cshtml
@@ -1,16 +1,17 @@
 ﻿@model OctagonPlatform.Models.FormsViewModels.UserFormViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-@using (Html.BeginForm("Create", "Users"))
+@using (Html.BeginForm("Edit", "Users"))
 {
     <p class="alert alert-danger">
         All fields are <strong>required.</strong>
     </p>
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(m => m.Id)
     <div class="form-group">
         @Html.LabelFor(m => m.UserName)
         @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", autofocus = "autofocus" })
@@ -51,8 +52,17 @@
         @Html.TextBoxFor(m => m.Password, new { @class = "form-control", autofocus = "autofocus" })
         @Html.ValidationMessageFor(m => m.Password)
     </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.IsLocked)
+        @Html.TextBoxFor(m => m.IsLocked, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.ValidationMessageFor(m => m.IsLocked)
+    </div>
     <button type="submit" class="btn btn-primary">Save</button>
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+
+
+
