--- a/OctagonPlatform/Views/Users/Index.cshtml
+++ b/OctagonPlatform/Views/Users/Index.cshtml
@@ -9,7 +9,7 @@
     <h3 class="panel-title">List Users</h3>
 </div>
 <p>
-    @Html.ActionLink("Add User", "Create", "Partners", routeValues:null, htmlAttributes: new{@class = "glyphicon glyphicon-plus-sign" })
+    @Html.ActionLink("Add User", "Create", "Users", routeValues:null, htmlAttributes: new{@class = "glyphicon glyphicon-plus-sign" })
 </p>
 <table class="table table-striped table-hover ">
     <thead>
