--- a/OctagonPlatform/Views/Partners/Create.cshtml
+++ b/OctagonPlatform/Views/Partners/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@using OctagonPlatform.Models
 @model OctagonPlatform.Models.FormsViewModels.PartnerFormViewModel
 
+
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
@@ -39,18 +40,18 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.CountryId)
-        @Html.DropDownListFor(m => m.StateId, new SelectList(Model.States, "Id", "Name"), "", new { @class = "form-control" })
+        @Html.DropDownListFor(m => m.CountryId, new SelectList(Model.Countries, "Id", "Name"), "", new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.CountryId)
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.StateId)
-        @Html.DropDownListFor(m => m.StateId, new SelectList(Model.States, "Id", "Name"), "", new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.StateId)
+        <div id="States">
+            <label for="States">States</label>
+            <select id="StatesId" name="States"></select>
+        </div>
+        <div><img id="loading" style="display:none" src="~/Content/loading_icon.gif" /></div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.CityId)
-        @Html.DropDownListFor(m => m.CityId, new SelectList(Model.Cities, "Id", "Name"), "", new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.CityId)
+        <div id="Cities"></div>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Email)
@@ -81,4 +82,34 @@
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}
+<script>
+    $('#CountryId').change(function () {
+                var CountriesId = $(this).val();
+                $.ajax({
+                    url: '@Url.Action("GetAllStates", "Populate")',
+                    data: { CountryID: CountriesId },
+                    datatype: "json",
+                    beforeSend: loadStart,
+                    complete: loadStop,
+                    success: function (data) {
+                        var ddldist = $('#StatesId');
+                        ddldist.empty();
+                        
+                       $.each(data, function (val, text) {
+                           
+                           ddldist.append(
+                               $('<option></option>').val(text.Value).html(text.Text)
+                            );
+                        });
+
+                    },
+                })
+    });
+    function loadStart() {
+        $('#loading').show();
+    }
+    function loadStop() {
+        $('#loading').hide();
+    }
+</script>
+    }
