--- a/OctagonPlatform/Views/Partners/Create.cshtml
+++ b/OctagonPlatform/Views/Partners/Create.cshtml
@@ -52,6 +52,8 @@
     </div>
     <div class="form-group">
         <div id="Cities"></div>
+        <label for="Cities">Cities</label>
+        <select id="CitiesId" name="Cities"></select>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Email)
@@ -84,20 +86,24 @@
     @Scripts.Render("~/bundles/jqueryval")
 <script>
     $('#CountryId').change(function () {
-                var CountriesId = $(this).val();
-                $.ajax({
-                    url: '@Url.Action("GetAllStates", "Populate")',
+        var CountriesId = $(this).val();
+        $.ajax({
+            url: '@Url.Action("GetAllStates", "Populate")',
                     data: { CountryID: CountriesId },
                     datatype: "json",
                     beforeSend: loadStart,
                     complete: loadStop,
                     success: function (data) {
-                        var ddldist = $('#StatesId');
-                        ddldist.empty();
-                        
+                        var ddlState = $('#StatesId');
+                        var ddlCities = $('#CitiesId');
+
+                        ddlState.empty();
+                        ddlState.append($('<option></option>').val("").html("Select..."));
+                        ddlCities.empty();
+
                        $.each(data, function (val, text) {
-                           
-                           ddldist.append(
+
+                           ddlState.append(
                                $('<option></option>').val(text.Value).html(text.Text)
                             );
                         });
@@ -105,6 +111,36 @@
                     },
                 })
     });
+
+    $('#StatesId').change(function () {
+                var StateId = $(this).val();
+                $.ajax({
+                    url: '@Url.Action("GetAllCities", "Populate")',
+                    data: { StateID: StateId },
+                    datatype: "json",
+                    beforeSend: loadStart,
+                    complete: loadStop,
+                    success: function (data) {
+                        console.log(data);
+
+                        var ddlCities = $('#CitiesId');
+                        ddlCities.empty();
+
+                        if (!$.isEmptyObject(data)) {
+                            ddlCities.append($('<option></option>').val("").html("Select..."));
+                        }
+
+                       $.each(data, function (val, text) {
+
+                           ddlCities.append(
+                               $('<option></option>').val(text.Value).html(text.Text)
+                            );
+                        });
+
+                    },
+                })
+    });
+
     function loadStart() {
         $('#loading').show();
     }
