--- a/OctagonPlatform/Views/Partners/Create.cshtml
+++ b/OctagonPlatform/Views/Partners/Create.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
-<h2>Create</h2>
+<h2>Create Partner</h2>
 
 @using (Html.BeginForm("Create", "Partners"))
 {
