--- a/OctagonPlatform/Views/Users/Create.cshtml
+++ b/OctagonPlatform/Views/Users/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model OctagonPlatform.Models.FormsViewModels.UserFormViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Add User";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
@@ -10,6 +10,14 @@
     <p class="alert alert-danger">
         All fields are <strong>required.</strong>
     </p>
+
+    if (!String.IsNullOrEmpty(Model.Error))
+    {
+        <div class="alert alert-danger">
+            @Model.Error.ToString()
+        </div>
+    }
+
     @Html.AntiForgeryToken()
     <div class="form-group">
         @Html.LabelFor(m => m.UserName)
@@ -43,7 +51,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.PartnerId)
-        @Html.DropDownListFor(m => m.Partners, new SelectList(Model.Partners, "Id", "BusinessName"), "", new { @class = "form-control" })
+        @Html.DropDownListFor(m => m.PartnerId, new SelectList(Model.Partners, "Id", "BusinessName"), "", new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.PartnerId)
     </div>
     <div class="form-group">
