--- a/OctagonPlatform/Views/Users/Create.cshtml
+++ b/OctagonPlatform/Views/Users/Create.cshtml
@@ -56,9 +56,15 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Password)
-        @Html.TextBoxFor(m => m.Password, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.PasswordFor(m => m.Password, new { @class = "form-control", autofocus = "autofocus" })
         @Html.ValidationMessageFor(m => m.Password)
     </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.ConfirmPassword)
+        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.ValidationMessageFor(m => m.ConfirmPassword)
+    </div>
+
     <button type="submit" class="btn btn-primary">Save</button>
 }
 @section Scripts {
