creado fichero xpopulate.js referenciado en las view partner

--- a/OctagonPlatform/Views/PartnerContacts/Create.cshtml
+++ b/OctagonPlatform/Views/PartnerContacts/Create.cshtml
@@ -28,11 +28,7 @@
         @Html.DropDownListFor(m => m.PartnerId, new SelectList(Model.Partners, "Id", "BusinessName"), "", new {@class = "form-control"})
         @Html.ValidationMessageFor(m => m.PartnerId)
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email)
-        @Html.EnumDropDownListFor(m => m.Email, "", new {@class = "form-control"})
-        @Html.ValidationMessageFor(m => m.Email)
-    </div>
+    
     <div class="form-group">
         @Html.LabelFor(m => m.Address1)
         @Html.TextBoxFor(m => m.Address1, new {@class = "form-control"})
@@ -79,68 +75,5 @@
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    <script>
-        $('#CountryId').change(function () {
-            var CountriesId = $(this).val();
-            $.ajax({
-                url: '@Url.Action("GetAllStates", "Populate")',
-                data: { CountryID: CountriesId },
-                datatype: "json",
-                beforeSend: loadStart,
-                complete: loadStop,
-                success: function (data) {
-                    var ddlState = $('#StatesId');
-                    var ddlCities = $('#CitiesId');
-
-                    ddlState.empty();
-                    ddlState.append($('<option></option>').val("").html("Select..."));
-                    ddlCities.empty();
-
-                    $.each(data, function (val, text) {
-
-                        ddlState.append(
-                            $('<option></option>').val(text.Value).html(text.Text)
-                        );
-                    });
-
-                },
-            })
-        });
-
-        $('#StatesId').change(function () {
-            var StateId = $(this).val();
-            $.ajax({
-                url: '@Url.Action("GetAllCities", "Populate")',
-                data: { StateID: StateId },
-                datatype: "json",
-                beforeSend: loadStart,
-                complete: loadStop,
-                success: function (data) {
-                    console.log(data);
-
-                    var ddlCities = $('#CitiesId');
-                    ddlCities.empty();
-
-                    if (!$.isEmptyObject(data)) {
-                        ddlCities.append($('<option></option>').val("").html("Select..."));
-                    }
-
-                    $.each(data, function (val, text) {
-
-                        ddlCities.append(
-                            $('<option></option>').val(text.Value).html(text.Text)
-                        );
-                    });
-
-                },
-            })
-        });
-
-        function loadStart() {
-            $('#loading').show();
-        }
-        function loadStop() {
-            $('#loading').hide();
-        }
-    </script>
+    @Scripts.Render("~/bundles/xpopulate")
 }
