--- a/OctagonPlatform/Views/Users/Edit.cshtml
+++ b/OctagonPlatform/Views/Users/Edit.cshtml
@@ -44,12 +44,12 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.PartnerId)
-        @Html.DropDownListFor(m => m.Partners, new SelectList(Model.Partners, "Id", "BusinessName"), "", new { @class = "form-control" })
+        @Html.DropDownListFor(m => m.PartnerId, new SelectList(Model.Partners, "Id", "BusinessName"), "", new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.PartnerId)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Password)
-        @Html.TextBoxFor(m => m.Password, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.TextBoxFor(m => m.Password, Model.Password, new { @class = "form-control", autofocus = "autofocus" })
         @Html.ValidationMessageFor(m => m.Password)
     </div>
     <div class="form-group">
