--- a/OctagonPlatform/Views/Users/Create.cshtml
+++ b/OctagonPlatform/Views/Users/Create.cshtml
@@ -66,6 +66,36 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Save</button>
+    #region Table of permissions
+
+    <table class="table table-striped table-hover ">
+        <thead>
+            <tr>
+                <th>SetOf</th>
+                <th>All</th>
+                <th>Create</th>
+                <th>View</th>
+                <th>Edit</th>
+                <th>Delete</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.SetOfPermissions)
+            {
+                <tr>
+                    <td>@Html.Label(item.Name)</td>
+                    <td>@Html.CheckBox(" ")</td>
+                    <td>@Html.CheckBox(item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id).Name)</td>
+                    <td>@Html.CheckBox(item.Name)</td>
+                    <td>@Html.CheckBox(item.Name)</td>
+                    <td>@Html.CheckBox(item.Name)</td>
+
+                </tr>
+            }
+
+    </table>
+
+    #endregion
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
